// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connected Components React Plugin - PropTypes Component.jsx snippet creation 1`] = `
Object {
  "description": "Component description.",
  "lang": "jsx",
  "snippet": "<MyComponent />",
}
`;

exports[`Connected Components React Plugin - PropTypes ComponentWithChildren.jsx snippet creation 1`] = `
Object {
  "description": "Component description.",
  "lang": "jsx",
  "snippet": "<MyComponent>
  {children}
</MyComponent>",
}
`;

exports[`Connected Components React Plugin - PropTypes ComponentWithChildrenAndProps.jsx snippet creation 1`] = `
Object {
  "description": "Component description.",
  "lang": "jsx",
  "snippet": "<MyComponent
  optionalArray={array}
  optionalBool={bool}
  optionalFunc={func}
  optionalNumber={number}
  optionalObject={object}
  optionalString={string}
  optionalSymbol={symbol}
  optionalNode={node}
  optionalElement={element}
  optionalElementType={elementType}
  optionalFoo={instanceOf(Foo)}
  optionalEnum={enum}
  optionalUnion={union[string|number|instanceOf(Foo)]}
  optionalArrayOf={arrayOf[number]}
  optionalObjectOf={objectOf[number]}
  optionalObjectWithShape={shape}
  optionalObjectWithStrictShape={exact}
  requiredFunc={func}
  requiredAny={any}
  customProp={() => {}}
  customArrayProp={arrayOf[custom]}
  customObjectOfProp={objectOf[custom]}>
  {children}
</MyComponent>",
}
`;

exports[`Connected Components React Plugin - PropTypes ComponentWithMemoization.jsx snippet creation 1`] = `
Object {
  "description": "Component description.",
  "lang": "jsx",
  "snippet": "<MyComponent
  optionalArray={array}
  optionalBool={bool}
  optionalFunc={func}
  optionalNumber={number}
  optionalObject={object}
  optionalString={string}
  optionalSymbol={symbol}
  optionalNode={node}
  optionalElement={element}
  optionalElementType={elementType}
  optionalFoo={instanceOf(Foo)}
  optionalEnum={enum}
  optionalUnion={union[string|number|instanceOf(Foo)]}
  optionalArrayOf={arrayOf[number]}
  optionalObjectOf={objectOf[number]}
  optionalObjectWithShape={shape}
  optionalObjectWithStrictShape={exact}
  requiredFunc={func}
  requiredAny={any}
  customProp={() => {}}
  customArrayProp={arrayOf[custom]}
  customObjectOfProp={objectOf[custom]}>
  {children}
</MyComponent>",
}
`;

exports[`Connected Components React Plugin - PropTypes ComponentWithProps.jsx snippet creation 1`] = `
Object {
  "description": "Component description.",
  "lang": "jsx",
  "snippet": "<MyComponent
  optionalArray={array}
  optionalBool={bool}
  optionalFunc={func}
  optionalNumber={number}
  optionalObject={object}
  optionalString={string}
  optionalSymbol={symbol}
  optionalNode={node}
  optionalElement={element}
  optionalElementType={elementType}
  optionalFoo={instanceOf(Foo)}
  optionalEnum={enum}
  optionalUnion={union[string|number|instanceOf(Foo)]}
  optionalArrayOf={arrayOf[number]}
  optionalObjectOf={objectOf[number]}
  optionalObjectWithShape={shape}
  optionalObjectWithStrictShape={exact}
  requiredFunc={func}
  requiredAny={any}
  customProp={() => {}}
  customArrayProp={arrayOf[custom]}
  customObjectOfProp={objectOf[custom]} />",
}
`;
